--- a/Assignment 2/WindowsServerLinux/WindowsServerLinux/WindowsServerLinux.csproj
+++ b/Assignment 2/WindowsServerLinux/WindowsServerLinux/WindowsServerLinux.csproj
@@ -30,6 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
