Still not working on linux

--- a/Assignment 2 Efforts/sqlite example-2/linux/sql_linux/sql_linux/sql_linux.csproj
+++ b/Assignment 2 Efforts/sqlite example-2/linux/sql_linux/sql_linux/sql_linux.csproj
@@ -31,7 +31,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="Mono.Data.Sqlite" />
+    <Reference Include="Mono.Data.Sqlite">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
