--- a/Assignment 2 Efforts/sqlite example-2/linux/sql_linux/sql_linux/sql_linux.csproj
+++ b/Assignment 2 Efforts/sqlite example-2/linux/sql_linux/sql_linux/sql_linux.csproj
@@ -30,15 +30,10 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System">
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="System" />
     <Reference Include="Mono.Data.Sqlite">
-      <Private>True</Private>
     </Reference>
-    <Reference Include="System.Data">
-      <Private>True</Private>
-    </Reference>
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
